--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 uwsgi
 psycopg2==2.7.1
 twilio==6.16.4
-Flask==1.0.2
-urllib3==1.23
-requests==2.19.1
+Flask==1.0.3
+urllib3>=1.24.2
+requests>=2.20.0
 APScheduler==3.6.0
 praw==6.2.0
 prawcore==1.0.1
